--- a/public/css/main.css
+++ b/public/css/main.css
@@ -22,6 +22,7 @@ h1 {
     border: 0;
     box-shadow: 2px 2px 8px #ddd;
     padding: 1rem;
+    margin-bottom: 1rem;
 }
 
 .showcase-card:hover {
@@ -38,21 +39,18 @@ a {
 
 .image-primary {
     border-radius: 1rem;
-    padding: 2rem;
-    max-height: 550px;
+    padding: 0 10px;
+    /* max-height: 550px; */
 
 }
-
-.cadeira-container {
-    transform: translateY(-60%);
+.cards{
+    margin: 1rem 0;
 }
-
 .img-card {
     display: flex;
     justify-content: center;
     align-items: center;
     flex-wrap: nowrap;
-    min-height: 150px;
     border: 1px solid #eee;
     border-radius: 5px;
     box-shadow: 2px 3px 10px #ddd;
@@ -63,19 +61,9 @@ a {
     max-height: 100vh;
     overflow-y: scroll;
     padding-top: 1rem;
-    padding-bottom: 200px;
 }
 .cards{
-    margin: 1rem 0;
-}
-.img-card .info {
-    border-left: 1px solid #ccc;
-    margin-left: 10px;
-    padding-left: 10px;
-}
-.info{
-    display: flex;
-    flex-direction: column;
+    max-width: 300px;
 }
 .img-card img:hover {
     transform: scale(1.01);
@@ -94,7 +82,7 @@ a {
     font-size: 1.2rem;
     border: 0;
     border-radius: 5px;
-    box-shadow: 1px 2px 4px #0C8973;
+    box-shadow: 1px 2px 4px #ddd;
 }
 .botao-pages:hover{
     color: #eee;
@@ -116,6 +104,7 @@ a {
     .cards-container {
         overflow-x: scroll;
         white-space: nowrap;
+        margin-top: 50px;
     }
 
     .cards {
