Mudanças na view das cadeiras.

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -25,10 +25,10 @@ h1 {
     margin-bottom: 1rem;
 }
 
-.showcase-card:hover {
+/* .showcase-card:hover {
     transform: scale(1.05);
     transition: 0.5s ease;
-}
+} */
 
 h3,
 a {
@@ -61,6 +61,7 @@ a {
     max-height: 100vh;
     overflow-y: scroll;
     padding-top: 1rem;
+    padding-bottom: 200px;
 }
 .cards{
     max-width: 300px;
@@ -74,7 +75,7 @@ a {
     position: fixed;
     width: 100px;
     right: 40px;
-    bottom: 0;
+    bottom: 20px;
     background-color: #0C8973;
     color: #eee;
     padding: 5px 1rem;
@@ -82,9 +83,28 @@ a {
     font-size: 1.2rem;
     border: 0;
     border-radius: 5px;
-    box-shadow: 1px 2px 4px #ddd;
+    box-shadow: 1px 2px 4px #000;
 }
 .botao-pages:hover{
+    color: #eee;
+    opacity: 0.9;
+}
+
+.botao-voltar {
+    position: fixed;
+    width: 100px;
+    left: 40px;
+    bottom: 20px;
+    background-color: #0C8973;
+    color: #eee;
+    padding: 5px 1rem;
+    text-align: center;
+    font-size: 1.2rem;
+    border: 0;
+    border-radius: 5px;
+    box-shadow: 1px 2px 4px #000;
+}
+.botao-voltar:hover{
     color: #eee;
     opacity: 0.9;
 }
